[tool.poetry]
name = "data-vis"
version = "0.1.0"
description = ""
authors = ["Matthew Holder <holdermatthew5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.1"
matplotlib = "^3.3.3"
sklearn = "^0.0"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
